--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
         <img id="inlogKnop" src="images/logo-MijnNS.png" alt="Logo Nederlandse Spoorwegen">
     </header>
 
-
-
     <main class="main">
         <div class="yellow-section">
             <form class="zoeken">
@@ -62,62 +60,22 @@
             </section>
         </div>
         <section class="carousel scroll verhalenSection aanbevolen">
-            <h2>Aanbevolen:</h2>
             <ul>
                 <li>
-                    <article>
-                        <h3>Gefrustreerd</h3>
-                        <img class="leeslijst" src="images/bookmark_leeg.png" alt="leeslijst knop">
-                        <a href="https://jimvandeven.github.io/VerhalenSiteWEB/gefrustreerd.html#gefrustreerdComment"><img class="comment" src="images/comments.png" alt="leeslijst knop"></a>
-                        <a href="gefrustreerd.html">
-                            <img src="images/compositie-gefrustreerd.jpg" alt="gefrustreerd"></a>
-                        <dl class="leestijd">
-                            <dt class="hartje"> <img class="hartje" src="images/clock-png-clock-icon-1600.png" alt="aantal likes"></dt>
-                            <dd class="aantalLikes">8</dd>
-                        </dl>
-                        <dl class="likes">
-                            <dt> <img class="hartje hartjeLeeg" src="images/hartje_leeg.png" alt="aantal likes">
-                            <img class="hartje stretchHartje hartjeVol hiddenDisplay" src="images/hartje_vol.png" alt="aantal likes"></dt>
-                            <dd class="aantalLikes">10</dd>
-                        </dl>
-                    </article>
+                    <a href="gefrustreerd.html">
+                        <img src="images/gefrustreerd_tumbnail.png" alt="gefrustreerd">
+                    </a>
                 </li>
                 <li>
-                    <article>
-                        <h3>Verhalend</h3>
-                        <img class="leeslijst" src="images/bookmark_leeg.png" alt="leeslijst knop">
-                        <a href="https://jimvandeven.github.io/VerhalenSiteWEB/verhalend.html#verhalendComment"><img class="comment" src="images/comments.png" alt="leeslijst knop"></a>
-                        <a href="verhalend.html"><img src="images/compositie-verhalend.jpg" alt="verhalend"></a>
-                        <dl class="leestijd">
-                            <dt class="hartje"> <img class="hartje" src="images/clock-png-clock-icon-1600.png" alt="aantal likes"></dt>
-                            <dd class="aantalLikes">8</dd>
-                        </dl>
-                        <dl class="likes">
-                            <dt> <img class="hartje" src="images/hartje_leeg.png" alt="aantal likes"></dt>
-                            <dd class="aantalLikes">10</dd>
-                        </dl>
-                    </article>
+                    <a href="verhalend.html"><img src="images/compositie-verhalend.jpg" alt="verhalend"></a>
                 </li>
                 <li>
-                    <article>
-                        <h3>Verwarde man</h3>
-                        <img class="leeslijst" src="images/bookmark_leeg.png" alt="leeslijst knop">
-                        <a href="https://jimvandeven.github.io/VerhalenSiteWEB/de_verwarde_man.html#verwardComment"><img class="comment" src="images/comments.png" alt="leeslijst knop"></a>
-                        <a href="de_verwarde_man.html"><img src="images/verwardeman-compositie.jpg" alt="verwarde man"></a>
-                        <dl class="leestijd">
-                            <dt class="hartje"> <img class="hartje" src="images/clock-png-clock-icon-1600.png" alt="aantal likes"></dt>
-                            <dd class="aantalLikes">8</dd>
-                        </dl>
-                        <dl class="likes">
-                            <dt> <img class="hartje" src="images/hartje_leeg.png" alt="aantal likes"></dt>
-                            <dd class="aantalLikes">10</dd>
-                        </dl>
-                    </article>
+                    <a href="de_verwarde_man.html"><img src="images/verwardeman-compositie.jpg" alt="verwarde man"></a>
                 </li>
 
             </ul>
         </section>
-        <section class="carousel scroll verhalenSection">
+        <!-- <section class="carousel scroll verhalenSection">
             <h2>Meeste Likes:</h2>
             <ul>
                 <li>
@@ -443,7 +401,7 @@
                 </li>
             </ul>
 
-        </section>
+        </section> -->
     </main>
     <aside>
         <img src="images/kleur_icon.png" class="hiddenDisplay" alt="kleur icoon" id="kleurIcoon">
