--- a/index.html
+++ b/index.html
@@ -64,7 +64,38 @@
                 <li>
                     <a href="gefrustreerd.html">
                         <img src="images/gefrustreerd_tumbnail.png" alt="gefrustreerd">
+                        <div class="heroflow__overlay heroflow__overlay--solidBlue">
+                            <svg class="heroflow__overlay-svg" preserveAspectRatio="xMinYMin meet" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 767 423">
+                                        <defs>
+                                            <clipPath id="clip-path" transform="translate(-0.331)">
+                                                <path class="cls-1" d="M0,423.5H4.523c111.477,0,212.584-43.107,289.315-119.838L477.662,119.838C554.393,43.107,655.954,0,766.977,0H0Z"></path>
+                                            </clipPath>
+                                            <linearGradient id="linear-gradient" y1="211.5" x2="767" y2="211.5" gradientUnits="userSpaceOnUse">
+                                                <stop class="heroflow__overlay-start" offset="0" stop-color="#003082"></stop>
+                                                <stop class="heroflow__overlay-stop" offset="1" stop-color="#003082"></stop>
+                                            </linearGradient>
+                                            <style>
+                                                    .cls-1 {
+                                                        fill: none;
+                                                    }
+                                                    .cls-2 {
+                                                        clip-path: url(#clip-path);
+                                                    }
+                                                    .cls-3 {
+                                                        fill: url(#linear-gradient); 
+                                                    }
+                                                    .heroflow__overlay-start {
+                                                        stop-opacity: .2;
+                                                    }
+                                                </style>
+                                        </defs>
+                                        <g class="cls-2">
+                                            <rect class="cls-3" width="767" height="423"></rect>
+                                        </g>
+                                    </svg>
+                        </div>
                     </a>
+
                 </li>
                 <li>
                     <a href="verhalend.html"><img src="images/compositie-verhalend.jpg" alt="verhalend"></a>
