--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <section class="carousel scroll verhalenSection aanbevolen">
             <ul>
                 <li>
+                    <h3 class="heroTitle">Gefrustreerd</h3>
                     <a href="gefrustreerd.html">
                         <img src="images/gefrustreerd_tumbnail.png" alt="gefrustreerd">
                         <div class="heroflow__overlay heroflow__overlay--solidBlue">
@@ -97,10 +98,11 @@
                     </a>
 
                 </li>
-                <li>
+                <li class="storyCard">
+                    <h3>Verhalend</h3>
                     <a href="verhalend.html"><img src="images/compositie-verhalend.jpg" alt="verhalend"></a>
                 </li>
-                <li>
+                <li class="storyCard">
                     <a href="de_verwarde_man.html"><img src="images/verwardeman-compositie.jpg" alt="verwarde man"></a>
                 </li>
 
