layout things yay!

--- a/index.html
+++ b/index.html
@@ -99,10 +99,15 @@
 
                 </li>
                 <li class="storyCard">
-                    <h3>Verhalend</h3>
+                    <h3 class="cardTitle">Verhalend</h3>
                     <a href="verhalend.html"><img src="images/compositie-verhalend.jpg" alt="verhalend"></a>
                 </li>
                 <li class="storyCard">
+                    <h3 class="cardTitle">Verwarde Man</h3>
+                    <a href="de_verwarde_man.html"><img src="images/verwardeman-compositie.jpg" alt="verwarde man"></a>
+                </li>
+                <li class="storyCard">
+                    <h3 class="cardTitle">Presentator die ten onrechte denkt aansluiting te hebben gevonden bij ‘de kids’</h3>
                     <a href="de_verwarde_man.html"><img src="images/verwardeman-compositie.jpg" alt="verwarde man"></a>
                 </li>
 
