working on responsiveness

--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
     <main class="main">
         <div class="yellow-section">
             <form class="zoeken">
-                <input type="text" name="fname" placeholder="zoeken...">
+                <input type="text" name="fname" placeholder="zoeken naar verhalen...">
                 <input type="submit" value="Zoek">
             </form>
-
         </div>
 
 
